Fixed options icon not showing up

--- a/scss/Components/accesibility-controls.scss
+++ b/scss/Components/accesibility-controls.scss
@@ -11,7 +11,7 @@ $transition-speed: 0.25s;
   min-height: 30px;
 
   background-size: cover;
-  background-image: url(../../media/images/options.png);
+  background-image: url(../media/images/options.png);
 
   position: fixed;
   bottom: 1vw;
